--- a/app/src/main/res/layout/activity_sandbox.xml
+++ b/app/src/main/res/layout/activity_sandbox.xml
@@ -12,22 +12,16 @@
         android:name="com.google.ar.sceneform.ux.ArFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-    <LinearLayout
-        android:id="@+id/pad"
+    <io.github.formular_team.formular.SteeringWheelView
+        android:id="@+id/steering_wheel"
         android:layout_width="160dp"
         android:layout_height="160dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9"
-        android:visibility="invisible">
-        <ImageView
-            android:id="@+id/wheel"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/steering_wheel" />
-    </LinearLayout>
+        app:layout_constraintVertical_bias="0.9" />
     <TextView
         android:id="@+id/ip"
         android:layout_width="wrap_content"
