--- a/app/src/main/res/layout/fragment_race.xml
+++ b/app/src/main/res/layout/fragment_race.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
-        android:id="@+id/pad"
+        android:id="@+id/steering_wheel"
         android:layout_width="160dp"
         android:layout_height="160dp"
         app:layout_constraintBottom_toBottomOf="parent"
