--- a/app/src/main/res/layout/fragment_ar_interface.xml
+++ b/app/src/main/res/layout/fragment_ar_interface.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SandboxActivity">
-
-    <fragment
-        android:id="@+id/ar"
-        android:name="com.google.ar.sceneform.ux.ArFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+    tools:context=".ArInterfaceFragment">
     <io.github.formular_team.formular.SteeringWheelView
         android:id="@+id/steering_wheel"
         android:layout_width="160dp"
@@ -20,25 +13,23 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.942"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
+        app:layout_constraintVertical_bias="0.9" />
     <TextView
         android:id="@+id/ip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75"
-        android:textSize="30sp"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:visibility="invisible" />
-
+        app:layout_constraintVertical_bias="0.75" />
     <Button
         android:id="@+id/start"
         android:layout_width="120dp"
@@ -47,11 +38,10 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.84" />
-
+        app:layout_constraintVertical_bias="0.9" />
     <TextView
         android:id="@+id/count"
         android:layout_width="match_parent"
@@ -69,7 +59,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.498"
         tools:layout_editor_absoluteX="-97dp" />
-
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
@@ -78,7 +67,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
         <TextView
             android:id="@+id/lap"
             android:layout_width="wrap_content"
@@ -87,7 +75,6 @@
             android:textColor="@android:color/white"
             android:textSize="30sp"
             android:textStyle="bold" />
-
         <TextView
             android:id="@+id/position"
             android:layout_width="wrap_content"
@@ -97,23 +84,5 @@
             android:textColor="@android:color/white"
             android:textSize="30sp"
             android:textStyle="bold" />
-
-
     </RelativeLayout>
-
-    <ListView
-        android:id="@+id/race_finish_positions"
-        android:layout_width="351dp"
-        android:layout_height="411dp"
-        android:layout_marginEnd="8dp"
-        android:visibility="invisible"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/ar"
-        app:layout_constraintEnd_toEndOf="@+id/count"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="@+id/count"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
