--- a/app/src/main/res/layout/fragment_ar_interface_land.xml
+++ b/app/src/main/res/layout/fragment_ar_interface_land.xml
@@ -12,8 +12,8 @@
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:visibility="invisible"
-        android:layout_gravity="bottom|center"
-        android:layout_marginBottom="50dp"
+        android:layout_gravity="right|center_vertical"
+        android:layout_margin="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +29,7 @@
         android:textStyle="bold"
         android:visibility="invisible"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -47,7 +47,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="75dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
