--- a/app/src/main/res/layout/fragment_ar_interface_land.xml
+++ b/app/src/main/res/layout/fragment_ar_interface_land.xml
@@ -73,6 +73,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.498"
         tools:layout_editor_absoluteX="-97dp" />
+
+    <TextView
+        android:id="@+id/position"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_gravity="bottom|left"
+        android:layout_marginLeft="25dp"
+        android:layout_marginBottom="25dp" />
+
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
@@ -86,15 +98,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:textColor="@android:color/white"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/position"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_toStartOf="@+id/lap"
             android:textColor="@android:color/white"
             android:textSize="30sp"
             android:textStyle="bold" />
